--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mockjs",
+  "name": "@tenbyten/mockjs",
   "title": "Mock.js",
   "description": "生成随机数据 & 拦截 Ajax 请求",
   "version": "1.0.1-beta3",
